fix overflow-x bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,14 @@
     @apply font-sans;
   }
 
+  .app-container {
+    @apply overscroll-y-none;
+    -webkit-overflow-scrolling: touch;
+    max-width: -webkit-fill-available;
+    max-width: fill-available;
+    background: yellow;
+  }
+
   /* html body */
   body {
     @apply overscroll-y-none;
